# forumbbcodegen2

./: .gitignore  LICENSE  README.md  gerador de codigos.spec  pyproject.toml
.github/: build.py
.github/workflows/: build.yml
src/: entry.py  main.py
src/bbcodegen/: bbcode.py  entry.py  helpers.py  imdb_api.py  media.py  models.py  validators.py
src/bbcodegen/core/: bbcode.py
src/bbcodegen/ui/: leftsideui.py  mainwindow.py
src/bbcodegen/utils/: __init__.py  minfo.py  resource.py
src/mko_bbcode/: entry.py
src/mko_bbcode/core/: __init__.py  bbcode.py
src/mko_bbcode/core/models/: __init__.py  form.py  models.py
src/mko_bbcode/infra/adapters/: __init__.py  imdb.py  models.py  tmdb.py
src/mko_bbcode/ui/: leftsideui.py  mainwindow.py  rightsideui.py
src/mko_bbcode/ui/wizard/: __init__.py  style.py  wizard.py
src/mko_bbcode/ui/wizard/pages/: __init__.py  _base.py  page_details.py  page_extras.py  page_file.py  page_images.py  page_info.py  page_preview.py  page_technical.py
